...
                              _buildTab("Sign Up", !isSignIn, () => setState(() => isSignIn = false)),
                            ],
                          ),
                        ),
                        const SizedBox(height: 35),
                        Text(
                          isSignIn ? "Welcome back" : "Create account",
                          style: GoogleFonts.dmSerifDisplay(fontSize: 32, color: const Color(0xFF1D2939)),
                        ),
                        const SizedBox(height: 25),

                        // FORM FIELDS
                        if (!isSignIn) _buildTextField("Full Name", "John Doe", controller: _nameController),
...
